public static class GameData
{
    public static class Animator
    {
        public const string Speed = "Speed";
        public const string DeathTriger = "Dead";
        public const string AttackBool = "Attack";
        public const string StompBool = "Stomp";
    }

    public static class JoystickTags
    {
        public const string DynamicJoystick = "Dynamic Joystick";
        public const string FireJoystick = "Fire Joystick";
        public const string CoolFireBall = "CoolDownFireBall";
        public const string CoolDownStomp = "CoolDownStomp";
        public const string StompButton = "StompButton";
    }

    public static class Tags 
    {
        public const string Player = "Player";
    }

    public static class Sounds 
    {
        public const string Thunder = "Thunder";
        public const string Shot = "Shot";
        public const string Stomp = "Stomp";
        public const string RocketExplosion = "RocketExplosion";
        public const string Hit = "Hit";
    }
}
